--- a/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div class="uk-text-center">
-                <span><h:outputText pt:uk-icon="users" styleClass="uk-text-primary uk-margin-small-right uk-text-capitalize"/><span class="uk-text-capitalize">alumnos sobre pasados</span></span>
+                <span><h:outputText pt:uk-icon="users" styleClass="uk-text-primary uk-margin-small-right uk-text-capitalize"/><span class="uk-text-capitalize">#{otrosetiqueta['unpaid.surplus']}</span></span>
                 <h1 class="uk-heading-primary uk-margin-remove uk-text-primary"><h:outputText value="#{escuelaPoblacionControlador.totalAlumnos - escuelaPoblacionControlador.totalAlumnosLicencias le 0 ? 0 : escuelaPoblacionControlador.totalAlumnos - escuelaPoblacionControlador.totalAlumnosLicencias}" id="total-alumnos-registro"/></h1>
             </div>
         </h:panelGroup>
